--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -28,9 +28,22 @@
 	padding: 10px 30px;
 	border-radius: 5px;
 	cursor: pointer;
-	background: khaki;
-	color: black;
+	background: #000099;
+	color: #00ffff;
 
 }
 
 
+.btnclear{
+	padding: 10px 30px;
+	border-radius: 5px;
+	cursor: pointer;
+	float: left;
+	background: #990000;
+	color: #ffff00;
+}
+.msgsent{
+	border: 1px solid green;
+	font-family: "Times New Roman";
+	font-size: 20px;
+}
