--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -8,7 +8,7 @@
 	
 	margin-bottom: 3rem; 
 	margin-top: 3rem; 
-	border: 1px solid rgb(238, 238, 238); 
+	border: 1px solid rgb(255, 255, 255); 
 	padding: 1.5rem; 
 	border-radius: 0.375rem; 
 	box-shadow: rgb(238, 238, 238) 0px 0px 20px 2px;
@@ -17,4 +17,10 @@
 	font-family: monospace;
 	font-size: 24px;
 
+}
+.design{
+	width:50px;
+}
+.design1{
+	width: 51.3px;
 }
